fixed text overflow on reviews

--- a/front-end/src/components/ProfilePage/profilepage.css
+++ b/front-end/src/components/ProfilePage/profilepage.css
@@ -173,6 +173,10 @@
     background-image: radial-gradient(circle at center center, rgb(255, 0, 0) 0%, rgb(206, 9, 9) 27.5%, rgb(167, 20, 20) 40%, rgb(136, 19, 19) 57.5%, rgb(94, 19, 19) 75%, rgb(68, 16, 16) 100%) !important;
 }
 
+#review {
+    overflow: hidden;
+}
+
 @media screen and (max-width: 1000px) {
     #listing.listing-container {
         display: flex;
